force-app/main/default/objects/Integration_Log__c/fields/Intuit_TID__c.field-meta.xml
<CustomField>
    <fullName>Intuit_TID__c</fullName>
    <externalId>true</externalId>
    <label>Intuit TID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>